version/0.16/_sources/api/ansys/dpf/core/operators/logic/enrich_materials/InputsEnrichMaterials.rst.txt






:class:`InputsEnrichMaterials`
==============================


.. py:class:: ansys.dpf.core.operators.logic.enrich_materials.InputsEnrichMaterials(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   enrich_materials operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.logic.enrich_materials()
   >>> my_MaterialContainer = dpf.()
   >>> op.inputs.MaterialContainer.connect(my_MaterialContainer)
   >>> my_streams = dpf.StreamsContainer()
   >>> op.inputs.streams.connect(my_streams)
   >>> my_streams_mapping = dpf.PropertyFieldsContainer()
   >>> op.inputs.streams_mapping.connect(my_streams_mapping)






.. py:currentmodule:: InputsEnrichMaterials

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~MaterialContainer`
            - Allows to connect MaterialContainer input to the operator.
          * - :py:attr:`~streams`
            - Allows to connect streams input to the operator.
          * - :py:attr:`~streams_mapping`
            - Allows to connect streams_mapping input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.logic.enrich_materials import InputsEnrichMaterials

Property detail
---------------

.. py:property:: MaterialContainer
   :type: ansys.dpf.core.inputs.Input


   Allows to connect MaterialContainer input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.logic.enrich_materials()
   >>> op.inputs.MaterialContainer.connect(my_MaterialContainer)
   >>> # or
   >>> op.inputs.MaterialContainer(my_MaterialContainer)

.. py:property:: streams
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.streams_container.StreamsContainer | ansys.dpf.core.fields_container.FieldsContainer]


   Allows to connect streams input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.logic.enrich_materials()
   >>> op.inputs.streams.connect(my_streams)
   >>> # or
   >>> op.inputs.streams(my_streams)

.. py:property:: streams_mapping
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.property_fields_container.PropertyFieldsContainer]


   Allows to connect streams_mapping input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.logic.enrich_materials()
   >>> op.inputs.streams_mapping.connect(my_streams_mapping)
   >>> # or
   >>> op.inputs.streams_mapping(my_streams_mapping)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




